--- a/backend/config/.env
+++ b/backend/config/.env
@@ -1,11 +1,11 @@
 PORT = 8000
-DB_URL = enter your db url
+DB_URL = mongodb+srv://saim:saim@cluster0.myttb9x.mongodb.net/test
 JWT_SECRET_KEY = "dfbkjgflseiia3948943954wfsdchsgfuw#%#%"
 JWT_EXPIRES = 7d
 ACTIVATION_SECRET = hfskjdweuiwe093$wew$@%W!Edfonoddfi
-SMPT_HOST = smtp.gmail.com
-SMPT_PORT = 465
-SMPT_PASSWORD = enter your SMPT_PASSWORD
-SMPT_MAIL = enter your smpt mail
+SMPT_HOST = smtp.office365.com
+SMPT_PORT = 587
+SMPT_PASSWORD = Kingkong@321
+SMPT_MAIL = usmanakhtar14261@gmail.com
 STRIPE_API_KEY = enter your stripe api key
 STRIPE_SECRET_KEY = enter your stripe secret key
